--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <!-- FULLSCREEN MEMORY OVERLAY -->
     <section id="fullscreenOverlay" class="fullscreen-memory">
-      <button id="closeFsBtn" class="back-btn">← फर्किनु</button>
+      <button id="closeFsBtn" class="back-btn">← Back</button>
 
       <div class="fs-hero">
         <h1 class="fs-title">Title</h1>
