--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
