Implemented cloudinary and firebase for the photo upload flow

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+    <div id="toast-container"></div>
+    <!-- AUDIO ELEMENT (Hidden) -->
     <!-- GLOBAL AUDIO PLAYER -->
     <div id="audioPlayer" class="audio-player">
       <button id="playBtn" class="control-btn" aria-label="Play">
@@ -117,6 +119,13 @@
     <!-- FULLSCREEN MEMORY OVERLAY -->
     <section id="fullscreenOverlay" class="fullscreen-memory">
       <button id="closeFsBtn" class="back-btn">← Back</button>
+      <button
+        id="addPolaroidBtn"
+        class="add-polaroid-btn"
+        style="display: none"
+      >
+        + Add Photo
+      </button>
 
       <div class="fs-hero">
         <h1 class="fs-title">Title</h1>
@@ -127,6 +136,209 @@
         <!-- Polaroids injected here -->
       </div>
     </section>
+
+    <!-- ADMIN CONTROLS -->
+    <div id="adminControls">
+      <button id="authBtn" class="login-trigger" title="Admin Login">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+          <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+        </svg>
+      </button>
+      <button
+        id="addPhotoBtn"
+        class="add-photo-btn"
+        style="display: none"
+        title="Add Memory"
+      >
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <line x1="12" y1="5" x2="12" y2="19"></line>
+          <line x1="5" y1="12" x2="19" y2="12"></line>
+        </svg>
+      </button>
+      <button
+        id="logoutBtn"
+        class="logout-btn"
+        style="display: none"
+        title="Logout"
+      >
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+          <polyline points="16 17 21 12 16 7"></polyline>
+          <line x1="21" y1="12" x2="9" y2="12"></line>
+        </svg>
+      </button>
+      <input
+        type="file"
+        id="photoUpload"
+        accept="image/*"
+        style="display: none"
+      />
+    </div>
+
+    <!-- LOGIN MODAL -->
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <h2>Admin Login</h2>
+        <input type="email" id="adminEmail" placeholder="Email" />
+        <input type="password" id="adminPass" placeholder="Password" />
+        <button id="loginSubmitBtn">Login</button>
+      </div>
+    </div>
+
+    <!-- CREATE MEMORY MODAL -->
+    <div id="createMemoryModal" class="modal">
+      <div
+        class="modal-content"
+        style="width: 90%; max-width: 400px; text-align: left"
+      >
+        <span class="close-modal" id="closeCreateModal">&times;</span>
+        <h2 style="text-align: center; margin-bottom: 20px">New Memory</h2>
+
+        <label for="newMemTitle" style="color: #aaa; font-size: 0.9em"
+          >Title</label
+        >
+        <input
+          type="text"
+          id="newMemTitle"
+          placeholder="e.g. Summer Trip 2026"
+        />
+
+        <label for="newMemDate" style="color: #aaa; font-size: 0.9em"
+          >Date</label
+        >
+        <input type="text" id="newMemDate" placeholder="e.g. July 2026" />
+
+        <label for="newMemDesc" style="color: #aaa; font-size: 0.9em"
+          >Description</label
+        >
+        <textarea
+          id="newMemDesc"
+          rows="3"
+          placeholder="A beautiful moment..."
+          style="
+            width: 100%;
+            background: #2a2a2a;
+            color: #fff;
+            border: 1px solid #333;
+            padding: 10px;
+            border-radius: 4px;
+            margin: 5px 0 15px;
+            font-family: inherit;
+            resize: vertical;
+          "
+        ></textarea>
+
+        <label for="newMemAudio" style="color: #aaa; font-size: 0.9em"
+          >Music</label
+        >
+        <select
+          id="newMemAudio"
+          style="
+            width: 100%;
+            background: #2a2a2a;
+            color: #fff;
+            border: 1px solid #333;
+            padding: 10px;
+            border-radius: 4px;
+            margin: 5px 0 15px;
+          "
+        >
+          <option value="assets/audio/sparkle.mp3">Sparkle (Default)</option>
+          <option value="assets/Lifetogether.mp3">Life Together</option>
+          <option value="assets/Quite.mp3">Quiet Days</option>
+          <option value="assets/Food.mp3">Food</option>
+          <option value="assets/Trip.mp3">Trip</option>
+          <option value="assets/datess.mp3">Datess</option>
+          <option value="assets/Roadtrip.mp3">Roadtrip</option>
+        </select>
+
+        <button id="createMemBtn" style="margin-top: 10px; background: #000">
+          Select Photo & Create
+        </button>
+      </div>
+    </div>
+
+    <!-- CUSTOM CONFIRMATION MODAL -->
+    <div id="confirmModal" class="modal" style="z-index: 10001">
+      <div class="modal-content" style="max-width: 400px; text-align: center">
+        <h3 id="confirmTitle" style="margin-bottom: 15px">Are you sure?</h3>
+        <p id="confirmMessage" style="color: #aaa; margin-bottom: 25px">
+          This action cannot be undone.
+        </p>
+
+        <div style="display: flex; gap: 10px; justify-content: center">
+          <button id="confirmCancelBtn" style="background: #333; flex: 1">
+            Cancel
+          </button>
+          <button id="confirmOkBtn" style="background: #d13030; flex: 1">
+            Delete
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- CUSTOM PROMPT MODAL -->
+    <div id="promptModal" class="modal" style="z-index: 10002">
+      <div class="modal-content" style="max-width: 400px; text-align: center">
+        <h3 id="promptTitle" style="margin-bottom: 15px">Enter Caption</h3>
+        <p
+          id="promptMessage"
+          style="
+            color: #aaa;
+            margin-bottom: 15px;
+            font-size: 0.9em;
+            display: none;
+          "
+        ></p>
+
+        <input
+          type="text"
+          id="promptInput"
+          style="
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            background: #333;
+            border: 1px solid #444;
+            color: #fff;
+            border-radius: 4px;
+          "
+          placeholder="Type here..."
+        />
+
+        <div style="display: flex; gap: 10px; justify-content: center">
+          <button id="promptCancelBtn" style="background: #333; flex: 1">
+            Cancel
+          </button>
+          <button id="promptOkBtn" style="background: #4caf50; flex: 1">
+            OK
+          </button>
+        </div>
+      </div>
+    </div>
 
     <script type="module" src="script.js"></script>
   </body>
