--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
         <!-- Decorations -->
         <div class="sprocket-holes-left"></div>
         <div class="sprocket-holes-right"></div>
+
+        <!-- Relocated Add Album Button -->
+        <button
+          id="addPhotoBtn"
+          class="add-album-floating-btn"
+          style="display: none"
+          title="Add Album"
+        >
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <line x1="12" y1="5" x2="12" y2="19"></line>
+            <line x1="5" y1="12" x2="19" y2="12"></line>
+          </svg>
+          <span>Add Album</span>
+        </button>
       </aside>
 
       <!-- RIGHT PANEL: The Stage -->
@@ -150,24 +171,6 @@
         >
           <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
           <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
-        </svg>
-      </button>
-      <button
-        id="addPhotoBtn"
-        class="add-photo-btn"
-        style="display: none"
-        title="Add Memory"
-      >
-        <svg
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <line x1="12" y1="5" x2="12" y2="19"></line>
-          <line x1="5" y1="12" x2="19" y2="12"></line>
         </svg>
       </button>
       <button
