--- a/index.html
+++ b/index.html
@@ -254,85 +254,179 @@
           "
         ></textarea>
 
-        <!-- New: Theme Color -->
-        <label style="color: #aaa; font-size: 0.9em; display: block"
+        <!-- New: Theme Color UI -->
+        <label
+          style="
+            color: #aaa;
+            font-size: 0.9em;
+            display: block;
+            margin-bottom: 8px;
+          "
           >Theme Color</label
         >
         <div
-          style="
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 15px;
-          "
+          class="color-picker-container"
+          style="display: flex; gap: 10px; margin-bottom: 20px"
         >
-          <input
-            type="color"
-            id="newMemColor"
-            value="#d13030"
+          <!-- Presets -->
+          <div
+            class="color-option selected"
+            data-value="#d13030"
+            style="background: #d13030"
+          ></div>
+          <div
+            class="color-option"
+            data-value="#2ecc71"
+            style="background: #2ecc71"
+          ></div>
+          <div
+            class="color-option"
+            data-value="#3498db"
+            style="background: #3498db"
+          ></div>
+          <div
+            class="color-option"
+            data-value="#9b59b6"
+            style="background: #9b59b6"
+          ></div>
+          <div
+            class="color-option"
+            data-value="#f1c40f"
+            style="background: #f1c40f"
+          ></div>
+          <!-- Custom Input Trigger -->
+          <div
+            class="color-option custom-trigger"
             style="
-              border: none;
-              width: 50px;
-              height: 30px;
-              padding: 0;
-              background: none;
-              cursor: pointer;
+              background: linear-gradient(45deg, red, blue);
+              position: relative;
             "
-          />
-          <span style="font-size: 0.8em; color: #666"
-            >Set album brand color</span
           >
+            <input
+              type="color"
+              id="newMemColor"
+              value="#d13030"
+              style="
+                opacity: 0;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                cursor: pointer;
+              "
+            />
+          </div>
         </div>
 
-        <!-- New: Enhanced Music Selection -->
-        <label style="color: #aaa; font-size: 0.9em; display: block"
+        <!-- New: Enhanced Music Selection UI -->
+        <label
+          style="
+            color: #aaa;
+            font-size: 0.9em;
+            display: block;
+            margin-bottom: 8px;
+          "
           >Background Music</label
         >
         <div
+          class="music-selection-container"
           style="
             background: #222;
-            padding: 12px;
-            border-radius: 6px;
+            padding: 15px;
+            border-radius: 8px;
             border: 1px solid #333;
             margin-bottom: 20px;
           "
         >
-          <select
-            id="newMemAudio"
-            style="
-              width: 100%;
-              background: #000;
-              color: #fff;
-              border: 1px solid #444;
-              padding: 8px;
-              border-radius: 4px;
-              margin-bottom: 10px;
-            "
+          <!-- Custom Select -->
+          <div
+            class="custom-select-wrapper"
+            style="position: relative; margin-bottom: 12px"
           >
-            <option value="assets/audio/sparkle.mp3">Sparkle (Default)</option>
-            <option value="assets/Lifetogether.mp3">Life Together</option>
-            <option value="assets/Quite.mp3">Quiet Days</option>
-            <option value="assets/Food.mp3">Food</option>
-            <option value="assets/Trip.mp3">Trip</option>
-            <option value="assets/datess.mp3">Datess</option>
-            <option value="assets/Roadtrip.mp3">Roadtrip</option>
-          </select>
+            <select
+              id="newMemAudio"
+              style="
+                width: 100%;
+                background: #000;
+                color: #fff;
+                border: 1px solid #444;
+                padding: 10px 15px;
+                border-radius: 6px;
+                appearance: none;
+                cursor: pointer;
+              "
+            >
+              <option value="assets/audio/sparkle.mp3">
+                Sparkle (Default)
+              </option>
+              <option value="assets/Lifetogether.mp3">Life Together</option>
+              <option value="assets/Quite.mp3">Quiet Days</option>
+              <option value="assets/Food.mp3">Food</option>
+              <option value="assets/Trip.mp3">Trip</option>
+              <option value="assets/datess.mp3">Datess</option>
+              <option value="assets/Roadtrip.mp3">Roadtrip</option>
+            </select>
+            <div
+              style="
+                position: absolute;
+                right: 15px;
+                top: 50%;
+                transform: translateY(-50%);
+                pointer-events: none;
+                color: #aaa;
+              "
+            >
+              ▼
+            </div>
+          </div>
+
           <div
             style="
               text-align: center;
               font-size: 0.8em;
-              color: #666;
-              margin: 5px 0;
+              color: #555;
+              margin: 8px 0;
             "
           >
             — OR —
           </div>
-          <input
-            type="file"
-            id="newMemAudioFile"
-            accept="audio/mpeg, audio/mp3, audio/*"
-            style="width: 100%; font-size: 0.9em; color: #ccc"
-          />
+
+          <!-- Custom File Upload -->
+          <div class="file-upload-wrapper" style="text-align: center">
+            <label
+              for="newMemAudioFile"
+              class="custom-file-label"
+              style="
+                display: inline-block;
+                background: #333;
+                color: #fff;
+                padding: 8px 16px;
+                border-radius: 20px;
+                font-size: 0.85em;
+                cursor: pointer;
+                transition: background 0.2s;
+                border: 1px solid #444;
+              "
+            >
+              🎵 Upload Custom MP3
+            </label>
+            <input
+              type="file"
+              id="newMemAudioFile"
+              accept="audio/mpeg, audio/mp3, audio/*"
+              style="display: none"
+            />
+            <div
+              id="audioFileName"
+              style="
+                margin-top: 5px;
+                font-size: 0.8em;
+                color: #aaa;
+                font-style: italic;
+              "
+            >
+              No file chosen
+            </div>
+          </div>
         </div>
 
         <button id="createMemBtn" style="margin-top: 10px; background: #000">
