Minor ui changes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <h1 class="stage-title">...</h1>
           <p class="stage-desc">...</p>
           <div class="stage-meta">...</div>
-          <div class="hint-text">Click to Open Memory</div>
+          <!-- <div class="hint-text">Click to Open Memory</div> -->
         </div>
       </section>
     </main>
